--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -6558,7 +6558,7 @@ header {
 .big-name .sticky-paper-head {
   padding: 15px;
   text-align: center;
-  width: 60%;
+  width: 70%;
   text-transform: uppercase;
   text-shadow: 0px 2px 0px #000000;
   color: #272425;
@@ -6580,9 +6580,10 @@ header {
 }
 .big-name .sticky-paper-head .short-tag {
   font-size: 25px;
-  font-weight: 600!important;
+  text-transform: none;
+  font-weight: 500;
   line-height: 35px;
-  letter-spacing: -1px;
+  letter-spacing: 0px;
 }
 .bold {
   font-weight: bold!important;
