--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -6558,7 +6558,7 @@ header {
 .big-name .sticky-paper-head {
   padding: 15px;
   text-align: center;
-  width: 70%;
+  width: 80%;
   text-transform: uppercase;
   text-shadow: 0px 2px 0px #000000;
   color: #272425;
@@ -7148,6 +7148,8 @@ header .avatar:before {
   margin: auto;
 }
 header .avatar img {
+  height: 280px;
+  object-fit: cover;
   -webkit-border-top-right-radius: 500px;
   -webkit-border-bottom-right-radius: 500px;
   -webkit-border-bottom-left-radius: 500px;
